Massive rejigger into single daemon
Completely restructure the daemon code to move the 4 discrete daemons
into a single daemon that can be run on every hypervisor. Introduce the
idea of a static list of "coordinator" nodes which are configured at
install time to run Zookeeper and FRR in router mode, and which are
allowed to take on client network management duties (gateway, DHCP, DNS,
etc.) while also allowing them to run VMs (i.e. no dedicated "router"
nodes required).

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+pvc (0.4-0) unstable; urgency=medium
+
+  * Unification of all daemons into node daemon
+  * Numerous client tweaks
+
+ -- Joshua Boniface <joshua@boniface.me>  Sat, 13 Oct 2018 10:40:14 -0400
+
 pvc (0.3-1) unstable; urgency=medium
 
   * Code and package reorganization pending additional daemons
