Update package version to 0.7

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pvc (0.7-0) unstable; urgency=medium
+
+  * TBD
+
+ -- Joshua Boniface <joshua@boniface.me>  Sat, 15 Feb 2019 23:24:17 -0500
+
 pvc (0.6-0) unstable; urgency=medium
 
   * Numerous improvements, implementation of provisioner and API client
