Update Debian changelog

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 pvc (0.7-0) unstable; urgency=medium
 
-  * TBD
+  * Numerous bugfixes and improvements
 
  -- Joshua Boniface <joshua@boniface.me>  Sat, 15 Feb 2019 23:24:17 -0500
 
