--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+pvc (0.9.2-0) unstable urgency=high
+
+  * Major linting of the codebase with flake8; adds linting tools
+  * Implements CLI-based modification of VM vCPUs, memory, networks, and disks without directly editing XML
+  * Fixes bug where `pvc vm log -f` would show all 1000 lines before starting
+  * Fixes bug in default provisioner libvirt schema (`drive` -> `driver` typo)
+
+ -- Joshua M. Boniface <joshua@boniface.me>  Sun, 08 Nov 2020 02:03:29 -0500
+
 pvc (0.9.1-0) unstable; urgency=high
 
   * Added per-VM migration method feature
