--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-pvc (0.9.2-0) unstable urgency=high
+pvc (0.9.2-0) unstable; urgency=high
 
   * Major linting of the codebase with flake8; adds linting tools
   * Implements CLI-based modification of VM vCPUs, memory, networks, and disks without directly editing XML
