--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pvc (0.9.3-0) unstable; urgency=high
+
+  * Fixes bugs with image & OVA upload parsing
+
+ -- Joshua M. Boniface <joshua@boniface.me>  Mon, 09 Nov 2020 10:28:15 -0500
+
 pvc (0.9.2-0) unstable; urgency=high
 
   * Major linting of the codebase with flake8; adds linting tools
