--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+pvc (0.9.5-0) unstable; urgency=high
+
+  * Fixes bug with line count in log follow
+  * Fixes bug with disk stat output being None
+  * Adds short pretty health output
+  * Documentation updates
+
+ -- Joshua M. Boniface <joshua@boniface.me>  Tue, 17 Nov 2020 12:34:04 -0500
+
 pvc (0.9.4-0) unstable; urgency=high
 
   * Fixes major bug in OVA parser
