--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pvc (0.9.6-0) unstable; urgency=high
+
+  * Fixes bug with migrations
+
+ -- Joshua M. Boniface <joshua@boniface.me>  Tue, 17 Nov 2020 13:01:54 -0500
+
 pvc (0.9.5-0) unstable; urgency=high
 
   * Fixes bug with line count in log follow
