--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+pvc (0.9.11-0) unstable; urgency=high
+
+  * Documentation updates
+  * Adds VNC information to VM info
+  * Goes back to external Ceph commands for disk usage
+
+ -- Joshua M. Boniface <joshua@boniface.me>  Tue, 05 Jan 2021 15:58:26 -0500
+
 pvc (0.9.10-0) unstable; urgency=high
 
   * Moves OSD stats uploading to primary, eliminating reporting failures while hosts are down
