--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pvc (0.9.12-0) unstable; urgency=high
+
+  * Fixes a bug in the pvcnoded service unit file causing a Zookeeper startup race condition
+
+ -- Joshua M. Boniface <joshua@boniface.me>  Thu, 28 Jan 2021 16:29:58 -0500
+
 pvc (0.9.11-0) unstable; urgency=high
 
   * Documentation updates
