--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+pvc (0.9.14-0) unstable; urgency=high
+
+  * Fixes bugs around cloned volume provisioning
+  * Fixes some minor visual bugs
+  * Minor license update (from GPL3+ to GPL3)
+  * Adds qemu-guest-agent support to provisioner-created VMs by default
+
+ -- Joshua M. Boniface <joshua@boniface.me>  Tue, 30 Mar 2021 10:27:37 -0400
+
 pvc (0.9.13-0) unstable; urgency=high
 
   * Adds nicer startup messages for daemons
