--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+pvc (0.9.20-0) unstable; urgency=high
+
+  * [Daemons] Implemented a Zookeeper schema handler and version 0 schema
+  * [Daemons] Completes major refactoring of codebase to make use of the schema handler
+  * [Daemons] Adds support for dynamic chema changges and "hot reloading" of pvcnoded processes
+  * [Daemons] Adds a functional testing script for verifying operation against a test cluster
+  * [Daemons, CLI] Fixes several minor bugs found by the above script
+  * [Daemons, CLI] Add support for Debian 11 "Bullseye"
+
+ -- Joshua M. Boniface <joshua@boniface.me>  Mon, 14 Jun 2021 18:06:27 -0400
+
 pvc (0.9.19-0) unstable; urgency=high
 
   * [CLI] Corrects some flawed conditionals
