Implement SR-IOV VF config set
Also fixes some random bugs, adds proper interface sorting, and assorted
tweaks.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,226 +1,5 @@
-pvc (0.9.20-0) unstable; urgency=high
+pvc (0.9.20~git~git-e13baf8) unstable; urgency=medium
 
-  * [Daemons] Implemented a Zookeeper schema handler and version 0 schema
-  * [Daemons] Completes major refactoring of codebase to make use of the schema handler
-  * [Daemons] Adds support for dynamic chema changges and "hot reloading" of pvcnoded processes
-  * [Daemons] Adds a functional testing script for verifying operation against a test cluster
-  * [Daemons, CLI] Fixes several minor bugs found by the above script
-  * [Daemons, CLI] Add support for Debian 11 "Bullseye"
+  * Unstable revision for commit e13baf8
 
- -- Joshua M. Boniface <joshua@boniface.me>  Mon, 14 Jun 2021 18:06:27 -0400
-
-pvc (0.9.19-0) unstable; urgency=high
-
-  * [CLI] Corrects some flawed conditionals
-  * [API] Disables SQLAlchemy modification tracking functionality (not used by us)
-  * [Daemons] Implements new zkhandler module for improved reliability and reusability
-  * [Daemons] Refactors some code to use new zkhandler module
-  * [API, CLI] Adds support for "none" migration selector (uses cluster default instead)
-  * [Daemons] Moves some configuration keys to new /config tree
-  * [Node Daemon] Increases initial lock timeout for VM migrations to avoid out-of-sync potential
-  * [Provisioner] Support storing and using textual cluster network labels ("upstream", "storage", "cluster") in templates
-  * [API] Avoid duplicating existing node states
-
- -- Joshua M. Boniface <joshua@boniface.me>  Sun, 06 Jun 2021 01:47:41 -0400
-
-pvc (0.9.18-0) unstable; urgency=high
-
-  * Adds VM rename functionality to API and CLI client
-
- -- Joshua M. Boniface <joshua@boniface.me>  Sun, 23 May 2021 17:23:10 -0400
-
-pvc (0.9.17-0) unstable; urgency=high
-
-  * [CLI] Fixes bugs in log follow output
-
- -- Joshua M. Boniface <joshua@boniface.me>  Wed, 19 May 2021 17:06:29 -0400
-
-pvc (0.9.16-0) unstable; urgency=high
-
-  * Improves some CLI help messages
-  * Skips empty local cluster in CLI
-  * Adjusts how confirmations happen during VM modify restarts
-  * Fixes bug around corrupted VM log files
-  * Fixes bug around subprocess pipe exceptions
-
- -- Joshua M. Boniface <joshua@boniface.me>  Mon, 10 May 2021 01:13:21 -0400
-
-pvc (0.9.15-0) unstable; urgency=high
-
-  * [CLI] Adds additional verification (--yes) to several VM management commands
-  * [CLI] Adds a method to override --yes/confirmation requirements via envvar (PVC_UNSAFE)
-  * [CLI] Adds description fields to PVC clusters in CLI
-
- -- Joshua M. Boniface <joshua@boniface.me>  Thu, 08 Apr 2021 13:37:47 -0400
-
-pvc (0.9.14-0) unstable; urgency=high
-
-  * Fixes bugs around cloned volume provisioning
-  * Fixes some minor visual bugs
-  * Minor license update (from GPL3+ to GPL3)
-  * Adds qemu-guest-agent support to provisioner-created VMs by default
-
- -- Joshua M. Boniface <joshua@boniface.me>  Tue, 30 Mar 2021 10:27:37 -0400
-
-pvc (0.9.13-0) unstable; urgency=high
-
-  * Adds nicer startup messages for daemons
-  * Adds additional API field for stored_bytes to pool stats
-  * Fixes sorting issues with snapshot lists
-  * Fixes missing increment/decrement of snapshot_count on volumes
-  * Fixes bad calls in pool element API endpoints
-  * Fixes inconsistent bytes_tohuman behaviour in daemons
-  * Adds validation and maximum volume size on creation (must be smaller than the pool free space)
-
- -- Joshua M. Boniface <joshua@boniface.me>  Wed, 17 Feb 2021 11:33:28 -0500
-
-pvc (0.9.12-0) unstable; urgency=high
-
-  * Fixes a bug in the pvcnoded service unit file causing a Zookeeper startup race condition
-
- -- Joshua M. Boniface <joshua@boniface.me>  Thu, 28 Jan 2021 16:29:58 -0500
-
-pvc (0.9.11-0) unstable; urgency=high
-
-  * Documentation updates
-  * Adds VNC information to VM info
-  * Goes back to external Ceph commands for disk usage
-
- -- Joshua M. Boniface <joshua@boniface.me>  Tue, 05 Jan 2021 15:58:26 -0500
-
-pvc (0.9.10-0) unstable; urgency=high
-
-  * Moves OSD stats uploading to primary, eliminating reporting failures while hosts are down
-  * Documentation updates
-  * Significantly improves RBD locking behaviour in several situations, eliminating cold-cluster start issues and failed VM boot-ups after crashes
-  * Fixes some timeout delays with fencing
-  * Fixes bug in validating YAML provisioner userdata
-
- -- Joshua M. Boniface <joshua@boniface.me>  Tue, 15 Dec 2020 10:45:15 -0500
-
-pvc (0.9.9-0) unstable; urgency=high
-
-  * Adds documentation updates
-  * Removes single-element list stripping and fixes surrounding bugs
-  * Adds additional fields to some API endpoints for ease of parsing by clients
-  * Fixes bugs with network configuration
-
- -- Joshua M. Boniface <joshua@boniface.me>  Wed, 09 Dec 2020 02:20:20 -0500
-
-pvc (0.9.8-0) unstable; urgency=high
-
-  * Adds support for cluster backup/restore
-  * Moves location of `init` command in CLI to make room for the above
-  * Cleans up some invalid help messages from the API
-
- -- Joshua M. Boniface <joshua@boniface.me>  Tue, 24 Nov 2020 12:26:57 -0500
-
-pvc (0.9.7-0) unstable; urgency=high
-
-  * Fixes bug with provisioner system template modifications
-
- -- Joshua M. Boniface <joshua@boniface.me>  Thu, 19 Nov 2020 10:48:28 -0500
-
-pvc (0.9.6-0) unstable; urgency=high
-
-  * Fixes bug with migrations
-
- -- Joshua M. Boniface <joshua@boniface.me>  Tue, 17 Nov 2020 13:01:54 -0500
-
-pvc (0.9.5-0) unstable; urgency=high
-
-  * Fixes bug with line count in log follow
-  * Fixes bug with disk stat output being None
-  * Adds short pretty health output
-  * Documentation updates
-
- -- Joshua M. Boniface <joshua@boniface.me>  Tue, 17 Nov 2020 12:34:04 -0500
-
-pvc (0.9.4-0) unstable; urgency=high
-
-  * Fixes major bug in OVA parser
-
- -- Joshua M. Boniface <joshua@boniface.me>  Tue, 10 Nov 2020 15:33:50 -0500
-
-pvc (0.9.3-0) unstable; urgency=high
-
-  * Fixes bugs with image & OVA upload parsing
-
- -- Joshua M. Boniface <joshua@boniface.me>  Mon, 09 Nov 2020 10:28:15 -0500
-
-pvc (0.9.2-0) unstable; urgency=high
-
-  * Major linting of the codebase with flake8; adds linting tools
-  * Implements CLI-based modification of VM vCPUs, memory, networks, and disks without directly editing XML
-  * Fixes bug where `pvc vm log -f` would show all 1000 lines before starting
-  * Fixes bug in default provisioner libvirt schema (`drive` -> `driver` typo)
-
- -- Joshua M. Boniface <joshua@boniface.me>  Sun, 08 Nov 2020 02:03:29 -0500
-
-pvc (0.9.1-0) unstable; urgency=high
-
-  * Added per-VM migration method feature
-  * Fixed bug with provisioner system template listing
-
- -- Joshua Boniface <joshua@boniface.me>  Thu, 29 Oct 2020 12:15:28 -0400
-
-pvc (0.9.0-0) unstable; urgency=high
-
-  * Numerous bugfixes and improvements
-
- -- Joshua Boniface <joshua@boniface.me>  Sun, 18 Oct 2020 14:31:00 -0400
-
-pvc (0.8-1) unstable; urgency=high
-
-  * Fix bug with IPv6 being enabled on bridged interfaces
-
- -- Joshua Boniface <joshua@boniface.me>  Thu, 15 Oct 2020 11:02:24 -0400
-
-pvc (0.8-0) unstable; urgency=medium
-
-  * Numerous bugfixes and improvements
-
- -- Joshua Boniface <joshua@boniface.me>  Tue, 11 Aug 2020 12:12:07 -0400
-
-pvc (0.7-0) unstable; urgency=medium
-
-  * Numerous bugfixes and improvements
-
- -- Joshua Boniface <joshua@boniface.me>  Sat, 15 Feb 2020 23:24:17 -0500
-
-pvc (0.6-0) unstable; urgency=medium
-
-  * Numerous improvements, implementation of provisioner and API client
-
- -- Joshua Boniface <joshua@boniface.me>  Sat, 08 Feb 2020 18:26:58 -0500
-
-pvc (0.5-0) unstable; urgency=medium
-
-  * First public release
-
- -- Joshua Boniface <joshua@boniface.me>  Thu, 08 Aug 2019 20:55:51 -0400
-
-pvc (0.4-0) unstable; urgency=medium
-
-  * Unification of all daemons into node daemon
-  * Numerous client tweaks
-
- -- Joshua Boniface <joshua@boniface.me>  Sat, 13 Oct 2018 10:40:14 -0400
-
-pvc (0.3-1) unstable; urgency=medium
-
-  * Code and package reorganization pending additional daemons
-
- -- Joshua Boniface <joshua@boniface.me>  Wed, 12 Sep 2018 12:08:28 -0400
-
-pvc (0.2-1) unstable; urgency=medium
-
-  * Minor version bump with stability fixes
-
- -- Joshua Boniface <joshua@boniface.me>  Wed, 18 Jul 2018 02:18:25 -0400
-
-pvc (0.1-1) unstable; urgency=medium
-
-  * Initial packaging release
-
- -- Joshua Boniface <joshua@boniface.me>  Sun, 17 Jun 2018 02:40:39 -0400
+ -- Joshua Boniface <joshua@boniface.me>  Mon, 21 Jun 2021 18:22:08 -0400
