--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+pvc (0.9.32-0) unstable; urgency=high
+
+  * [CLI Client] Fixes some incorrect colours in network lists
+  * [Documentation] Adds documentation screenshots of CLI client
+  * [Node Daemon] Fixes a bug if VM stats gathering fails
+
+ -- Joshua M. Boniface <joshua@boniface.me>  Thu, 19 Aug 2021 12:37:58 -0400
+
 pvc (0.9.31-0) unstable; urgency=high
 
   * [Packages] Cleans up obsolete Suggests lines
