--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+pvc (0.9.33-0) unstable; urgency=high
+
+  * [Node Daemon] A major refactoring of the node daemon
+  * [CLI Client] Fixes output errors if a node has no provisioner data
+  * [Packages] Fixes issues with including __pycache__ directories in .deb files
+
+ -- Joshua M. Boniface <joshua@boniface.me>  Sat, 21 Aug 2021 03:28:48 -0400
+
 pvc (0.9.32-0) unstable; urgency=high
 
   * [CLI Client] Fixes some incorrect colours in network lists
