--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pvc (0.9.38-0) unstable; urgency=high
+
+  * [All] Significantly improve storage benchmark format and reporting
+
+ -- Joshua M. Boniface <joshua@boniface.me>  Sun, 03 Oct 2021 22:32:41 -0400
+
 pvc (0.9.37-0) unstable; urgency=high
 
   * [All] Adds support for configurable OSD DB size ratios
