--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+pvc (0.9.42-0) unstable; urgency=high
+
+  * [Documentation] Reworks and updates various documentation sections
+  * [Node Daemon] Adjusts the fencing process to use a power off rather than a power reset for maximum certainty
+  * [Node Daemon] Ensures that MTU values are validated during the first read too
+  * [Node Daemon] Corrects the loading of the bridge_mtu value to use the current active setting rather than a fixed default to prevent unintended surprises
+
+ -- Joshua M. Boniface <joshua@boniface.me>  Tue, 12 Oct 2021 13:48:19 -0400
+
 pvc (0.9.41-0) unstable; urgency=high
 
   * Fixes a bad conditional check in IPMI verification
