--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,18 @@
+pvc (0.9.43-0) unstable; urgency=high
+
+  * [Packaging] Fixes a bad test in postinst            
+  * [CLI] Adds support for removing VM interfaces by MAC address                                                         
+  * [CLI] Modifies the default restart + live behaviour to prefer the explicit restart                                   
+  * [CLI] Adds support for adding additional VM interfaces in the same network                                           
+  * [CLI] Various ordering and message fixes                                                                             
+  * [Node Daemon] Adds additional delays and retries to fencing actions                                                  
+  * [All] Adds Black formatting for Python code and various script/hook cleanups                                         
+  * [CLI/API] Adds automatic shutdown or stop when disabling a VM                                                        
+  * [CLI] Adds support for forcing colourized output                                                                     
+  * [Docs] Remove obsolete Ansible and Testing manuals  
+
+ -- Joshua M. Boniface <joshua@boniface.me>  Mon, 08 Nov 2021 02:27:38 -0500
+
 pvc (0.9.42-0) unstable; urgency=high
 
   * [Documentation] Reworks and updates various documentation sections
