--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,17 @@
+pvc (0.9.46-0) unstable; urgency=high
+
+  * [API] Fixes bugs with legacy benchmark display
+  * [API] Fixes a bug around cloned image sizes
+  * [API] Removes extraneous message text in provisioner create command
+  * [API] Corrects bugs around fuzzy matching
+  * [CLI] Adds auditing for PVC CLI to local syslog
+  * [CLI] Adds --yes bypass for benchmark command
+  * [Node Daemon/API/CLI] Adds support for "detect" strings when specifying OSD or OSDDB devices
+  * [Node Daemon] Fixes a bug when removing OSDs
+  * [Node Daemon] Fixes a single-node cluster shutdown deadlock
+
+ -- Joshua M. Boniface <joshua@boniface.me>  Tue, 28 Dec 2021 15:02:14 -0500
+
 pvc (0.9.45-0) unstable; urgency=high
 
   * [Node Daemon] Fixes an ordering issue with pvcnoded.service
