--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+pvc (0.9.47-0) unstable; urgency=high
+
+  * [Node Daemon/API/CLI] Adds Ceph pool device class/tier support
+  * [API] Fixes a bug returning values if a Ceph pool has not yet reported stats
+  * [API/CLI] Adds PGs count to the pool list output
+  * [API/CLI] Adds Ceph pool PGs count adjustment support
+
+ -- Joshua M. Boniface <joshua@boniface.me>  Tue, 28 Dec 2021 22:01:22 -0500
+
 pvc (0.9.46-0) unstable; urgency=high
 
   * [API] Fixes bugs with legacy benchmark display
