--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+pvc (0.9.48-0) unstable; urgency=high
+
+  * [CLI] Fixes situation where only a single cluster is available
+  * [CLI/API/Daemon] Allows forcing of OSD removal ignoring errors
+  * [CLI] Fixes bug where down OSDs are not displayed
+
+ -- Joshua M. Boniface <joshua@boniface.me>  Fri, 29 Apr 2022 12:13:58 -0400
+
 pvc (0.9.47-0) unstable; urgency=high
 
   * [Node Daemon/API/CLI] Adds Ceph pool device class/tier support
