Fix bad changelog entries

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,7 @@
 pvc (0.9.50-0) unstable; urgency=high
 
-  * Adds free memory node selector
-  * Fixes bug sending space-containing detect disk strings
+  * [Node Daemon/API/CLI] Adds free memory node selector
+  * [Node Daemon] Fixes bug sending space-containing detect disk strings
 
  -- Joshua M. Boniface <joshua@boniface.me>  Wed, 06 Jul 2022 16:01:14 -0400
 
