--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+pvc (0.9.51-0) unstable; urgency=high
+
+  * [CLI Client] Fixes a faulty literal_eval when viewing task status
+  * [CLI Client] Adds a confirmation flag to the vm disable command
+  * [Node Daemon] Removes the pvc-flush service
+
+ -- Joshua M. Boniface <joshua@boniface.me>  Mon, 25 Jul 2022 23:25:41 -0400
+
 pvc (0.9.50-0) unstable; urgency=high
 
   * [Node Daemon/API/CLI] Adds free memory node selector
