--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+pvc (0.9.55-0) unstable; urgency=high
+
+  * Fixes a problem with the literal eval handler in the provisioner (again)
+  * Fixes a potential log deadlock in Zookeeper-lost situations when doing keepalives
+
+ -- Joshua M. Boniface <joshua@boniface.me>  Tue, 04 Oct 2022 13:21:40 -0400
+
 pvc (0.9.54-0) unstable; urgency=high
 
 [CLI Client] Fixes a bad variable reference from the previous change
