--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pvc (0.9.66-0) unstable; urgency=high
+
+  * [CLI] Fixes a missing YAML import in CLI
+
+ -- Joshua M. Boniface <joshua@boniface.me>  Sun, 27 Aug 2023 11:36:05 -0400
+
 pvc (0.9.65-0) unstable; urgency=high
 
   * [CLI] Fixes a bug in the node list filtering command
